# detr

./: .gitignore  coco_data_format.py  eval.py  eval_inference_speed.py  eval_person_detr.py  eval_person_hog.py  make_person_data.py  make_subdataset.py  pyproject.toml  run.sh  sft_lora.py  visual_hog.py
hog/: __init__.py  hog.py  hog_detector.py  test_detection.py
