[project]
name = "detr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.2.4",
    "numpy>=2.3.5",
    "scipy>=1.17.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
